@@ -117,10 +117,13 @@ class Privacy(GUIBase):
              _("""List of addresses (or regexps) whose subscriptions do not
              require approval."""),
 
-             _("""When subscription requires approval, addresses in this list
+             (_("""When subscription requires approval, addresses in this list
              are allowed to subscribe without administrator approval. Add
              addresses one per line. You may begin a line with a ^ character
-             to designate a (case insensitive) regular expression match.""")),
+             to designate a (case insensitive) regular expression match.""")
+             + ' ' +
+             _("""You may also use the @listname notation to designate the
+             members of another list in this installation."""))),
 
             ('unsubscribe_policy', mm_cfg.Radio, (_('No'), _('Yes')), 0,
              _("""Is the list moderator's approval required for unsubscription
